--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="http://mall.newbee.ltd/favicon.ico">
-    <title>vue3-admin</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="https://s.yezgea02.com/1609305532675/echarts.js"></script>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<style>
+  html {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+</style>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="http://mall.newbee.ltd/favicon.ico">
+  <title>vue3-admin</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="https://s.yezgea02.com/1609305532675/echarts.js"></script>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
